@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.214 2007/02/02 22:30:36 tlecomte Exp $
+dnl $Id: configure.in,v 1.215 2007/02/04 18:58:06 tlecomte Exp $
 dnl
 dnl this is actually major.minor ...
 dnl note that for a non-beta release, we need to
@@ -915,40 +915,11 @@ if test "${enable_wxwidgets}" = yes ; then
   fi
 
   dnl Check for Cairo
-  PKG_CHECK_MODULES(CAIROPANGO, [cairo >= 0.9.0 pango >= 1.10 pangocairo >= 1.10],
-    [HAVE_CAIROPANGO=1], dnl not used, but may solve problems with some pkg-config
-    [if test $pkg_failed = yes; then
-	AC_MSG_WARN(dnl
-[Package requirements (cairo >= 0.9.0 pango >= 1.10 pangocairo >= 1.10) for the
-wxWidgets terminal were not met:
-
-$CAIROPANGO_PKG_ERRORS
-
-Consider adjusting the PKG_CONFIG_PATH environment variable if you
-installed software in a non-standard prefix.
-
-Alternatively, you can avoid the need to call pkg-config if you set the
-environment variables CAIROPANGO_CFLAGS and CAIROPANGO_LIBS to the
-corresponding flags for cairo, pango, and pangocairo.
-See the pkg-config man page for more details.
-
-The wxWidgets terminal will not be compiled.])
-    elif test $pkg_failed = untried; then
-	AC_MSG_WARN(dnl
-[The pkg-config script could not be found or is too old.  Make sure it
-is in your PATH or set the PKG_CONFIG environment variable to the full
-path to pkg-config.
-
-Alternatively, you can avoid the need to call pkg-config if you set the
-environment variables CAIROPANGO_CFLAGS and CAIROPANGO_LIBS to the
-corresponding flags for cairo, pango, and pangocairo.
-See the pkg-config man page for more details.
-
-To get pkg-config, see <http://www.freedesktop.org/software/pkgconfig>.
-
-The wxWidgets terminal will not be compiled.])
-    fi
-    enable_wxwidgets_ok=no])
+  PKG_CHECK_MODULES_NOFAIL(CAIROPANGO, [cairo >= 0.9.0 pango >= 1.10 pangocairo >= 1.10])
+  if test $pkg_failed != no; then
+    AC_MSG_WARN([The wxWidgets terminal will not be compiled.])
+    enable_wxwidgets_ok=no
+  fi
 
   dnl Check for buggy Pango 1.10.2
   PKG_CHECK_MODULES(PANGO_1_10_2, [pango = 1.10.2],
@@ -957,8 +928,7 @@ The wxWidgets terminal will not be compiled.])
 results in the wxWidgets terminal. If you want to use this terminal, please
 install a different version of Pango.])
     enable_wxwidgets_ok=no],
-    [AC_MSG_RESULT([no])
-    HAVE_PANGO_1_10_2=0])
+    [HAVE_PANGO_1_10_2=0])
 fi
 
 if test "${enable_wxwidgets_ok}" = yes ; then
